Work in progress.

--- a/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -591,6 +591,22 @@ Hero_AnimBlueprint_C.Default=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
 AnimPreviewInstance.RootMotion=True
+InputSettings.MouseProperties=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_InputAxisEvent.Input=True
+K2Node_GetInputAxisValue.Input=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+L_Hero_C.AssetUserData=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -690,9 +706,10 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-L_Hero_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Character="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Pawn="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+L_Hero_C=
+Character=
+Pawn=
+InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/L_Hero
@@ -721,7 +738,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=246.400 Y=134.400
-WindowSize=X=1283.200 Y=723.200
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -738,7 +755,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/User/Documents/Unreal Projects/Lesson_01/Content/ThirdPersonBP/Maps
+UNR=C:/Users/User/Documents/Unreal Projects/devtodev-ue/Lesson_01/Content/ThirdPersonBP/Maps
 BRUSH=C:/Users/User/Documents/Unreal Projects/Lesson_01/Content/
 FBX=C:/Users/User/Documents/Unreal Projects/Lesson_01/Content/
 FBXAnim=C:/Users/User/Documents/Unreal Projects/Lesson_01/Content/
@@ -1492,6 +1509,67 @@ AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeInd
 
 [DetailCustomWidgetExpansion]
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
+CryptoKeysSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+GeneralProjectSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+GameplayTagsSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+GameMapsSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+MoviePlayerSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+ProjectPackagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+HardwareTargetingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+AssetManagerSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+AssetToolsSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+AISystem=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+AnimationSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+AudioSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+ChaosSolverSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+CollisionProfile=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+ConsoleSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+CookerSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+CrowdManager=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+DebugCameraControllerSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+GameplayDebuggerConfig=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+GarbageCollectionSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+Engine=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+HierarchicalLODSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+InputSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+LandscapeSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+RecastNavMesh=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+NavigationSystemV1=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+NetworkSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+PhysicsSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+RendererSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+RendererOverrideSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+SlateSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+StreamingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+TutorialSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+UserInterfaceSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+LevelEditor2DSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+EditorProjectAppearanceSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+BlueprintEditorProjectSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+ClassViewerProjectSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+ProxyLODMeshSimplificationSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+MovieSceneToolsProjectSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+MeshSimplificationSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+PaperImporterSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+SkeletalMeshSimplificationSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+StructViewerProjectSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+TextureImportSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+UMGEditorProjectSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+AndroidRuntimeSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+ShaderPlatformQualitySettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+AndroidSDKSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+IOSRuntimeSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+LuminRuntimeSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+MagicLeapSDKSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+WindowsTargetSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+AvfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+ImgMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+LevelSequenceEditorSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+MagicLeapSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+PaperRuntimeSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
