--- a/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -607,6 +607,31 @@ BP_Sky_Sphere_C.Collision=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
 L_Hero_C.AssetUserData=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+SkeletalMeshSocket.Socket Parameters=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+StaticMeshSocket.StaticMeshSocket=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_VariableGet.Events=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -710,17 +735,19 @@ L_Hero_C=
 Character=
 Pawn=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" "
+StaticMeshSocket="\"Object.StaticMeshSocket.RelativeLocation\" \"Object.StaticMeshSocket.RelativeRotation\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/L_Hero
-MRUItem1=/Game/Characters/Hero/Animations/Hero_Run_BlendSpace
-MRUItem2=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
-MRUItem3=/Game/Characters/Hero/Animations/Hero_Idle
-MRUItem4=/Game/Characters/Hero/Hero_SkelMesh
-MRUItem5=/Game/Characters/Hero/Hero_Physics
-MRUItem6=/Game/Characters/Hero/Animations/Hero_Death
-MRUItem7=/Game/Characters/Hero/Hero_Skeleton
-MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/Characters/Hero/Weapons/Hero_Rifle
+MRUItem1=/Game/Characters/Hero/Hero_Skeleton
+MRUItem2=/Game/Characters/Hero/Hero_SkelMesh
+MRUItem3=/Game/Blueprints/L_Hero
+MRUItem4=/Game/Characters/Hero/Animations/Hero_Run_BlendSpace
+MRUItem5=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
+MRUItem6=/Game/Characters/Hero/Animations/Hero_Idle
+MRUItem7=/Game/Characters/Hero/Hero_Physics
+MRUItem8=/Game/Characters/Hero/Animations/Hero_Death
+MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -732,13 +759,14 @@ MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 /Game/Characters/Hero/Animations/Hero_AnimBlueprint.Hero_AnimBlueprint=0
 /Game/Characters/Hero/Animations/Hero_Idle.Hero_Idle=0
 /Game/Characters/Hero/Animations/Hero_Run_BlendSpace.Hero_Run_BlendSpace=0
+/Game/Characters/Hero/Weapons/Hero_Rifle.Hero_Rifle=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=246.400 Y=134.400
-WindowSize=X=1284.800 Y=724.800
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1481,6 +1509,12 @@ AnimationEditor.TimeStamp=2020.04.28-18.01.12
 AnimationEditor.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2020.04.28-18.01.33
 PhysicsAssetEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2020.04.28-18.01.25
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2020.04.28-18.01.40
+StaticMeshEditor.LastCompileMethod=Unknown
+MeshBuilder.TimeStamp=2020.04.28-18.01.30
+MeshBuilder.LastCompileMethod=Unknown
 
 [/Script/EditorStyle.EditorStyleSettings]
 bShowAllAdvancedDetails=True
