Enemy blueprint and animation blueprint.

--- a/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -632,6 +632,54 @@ K2Node_VariableGet.Events=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+Enemy_AnimBlueprint_C.RootMotion=True
+Enemy_AnimBlueprint_C.Default=True
+L_Enemy_C.Character=True
+L_Enemy_C.Tick=True
+L_Enemy_C.Camera=True
+L_Enemy_C.Pawn=True
+L_Enemy_C.Rendering=True
+L_Enemy_C.Replication=True
+L_Enemy_C.Collision=True
+L_Enemy_C.Input=True
+L_Enemy_C.Actor=True
+L_Enemy_C.Variable=True
+L_Enemy_C.TransformCommon=True
+L_Enemy_C.Sockets=True
+L_Enemy_C.Animation=True
+L_Enemy_C.Mesh=True
+L_Enemy_C.Clothing=True
+L_Enemy_C.MasterPoseComponent=True
+L_Enemy_C.Physics=True
+L_Enemy_C.ClothingSimulation=True
+L_Enemy_C.Lighting=True
+L_Enemy_C.SkinWeights=True
+L_Enemy_C.VirtualTexture=True
+L_Enemy_C.Tags=True
+L_Enemy_C.ComponentReplication=True
+L_Enemy_C.Activation=True
+L_Enemy_C.Cooking=True
+L_Enemy_C.Events=True
+L_Enemy_C.Materials=True
+L_Enemy_C.Shape=True
+L_Enemy_C.Navigation=True
+L_Enemy_C.Character Movement (General Settings)=True
+L_Enemy_C.Character Movement: Walking=True
+L_Enemy_C.Character Movement: Jumping / Falling=True
+L_Enemy_C.Character Movement (Networking)=True
+L_Enemy_C.Character Movement: Swimming=True
+L_Enemy_C.Character Movement: Flying=True
+L_Enemy_C.Character Movement: Custom Movement=True
+L_Enemy_C.Character Movement (Rotation Settings)=True
+L_Enemy_C.Character Movement: Physics Interaction=True
+L_Enemy_C.Character Movement=True
+L_Enemy_C.Character Movement: Avoidance=True
+L_Enemy_C.RootMotion=True
+L_Enemy_C.Character Movement: NavMesh Movement=True
+L_Enemy_C.NavMovement=True
+L_Enemy_C.Velocity=True
+L_Enemy_C.PlanarMovement=True
+L_Enemy_C.MovementComponent=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -677,7 +725,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Hero
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -738,16 +786,19 @@ InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisC
 StaticMeshSocket="\"Object.StaticMeshSocket.RelativeLocation\" \"Object.StaticMeshSocket.RelativeRotation\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Hero/Weapons/Hero_Rifle
-MRUItem1=/Game/Characters/Hero/Hero_Skeleton
-MRUItem2=/Game/Characters/Hero/Hero_SkelMesh
-MRUItem3=/Game/Blueprints/L_Hero
-MRUItem4=/Game/Characters/Hero/Animations/Hero_Run_BlendSpace
-MRUItem5=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
-MRUItem6=/Game/Characters/Hero/Animations/Hero_Idle
-MRUItem7=/Game/Characters/Hero/Hero_Physics
-MRUItem8=/Game/Characters/Hero/Animations/Hero_Death
-MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/Blueprints/L_Enemy
+MRUItem1=/Game/Blueprints/L_Hero
+MRUItem2=/Game/Characters/Enemy/Enemy_SkelMesh
+MRUItem3=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
+MRUItem4=/Game/Characters/Enemy/Animations/Enemy_AnimBlueprint
+MRUItem5=/Game/Characters/Hero/Weapons/Hero_Rifle
+MRUItem6=/Game/Characters/Hero/Hero_Skeleton
+MRUItem7=/Game/Characters/Hero/Hero_SkelMesh
+MRUItem8=/Game/Characters/Hero/Animations/Hero_Run_BlendSpace
+MRUItem9=/Game/Characters/Hero/Animations/Hero_Idle
+MRUItem10=/Game/Characters/Hero/Hero_Physics
+MRUItem11=/Game/Characters/Hero/Animations/Hero_Death
+MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -760,13 +811,14 @@ MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 /Game/Characters/Hero/Animations/Hero_Idle.Hero_Idle=0
 /Game/Characters/Hero/Animations/Hero_Run_BlendSpace.Hero_Run_BlendSpace=0
 /Game/Characters/Hero/Weapons/Hero_Rifle.Hero_Rifle=0
+/Game/Characters/Enemy/Enemy_SkelMesh.Enemy_SkelMesh=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=246.400 Y=134.400
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1291.200 Y=731.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
