--- a/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -680,6 +680,76 @@ L_Enemy_C.NavMovement=True
 L_Enemy_C.Velocity=True
 L_Enemy_C.PlanarMovement=True
 L_Enemy_C.MovementComponent=True
+L_Character_C.Character=True
+L_Character_C.Tick=True
+L_Character_C.Camera=True
+L_Character_C.Pawn=True
+L_Character_C.Rendering=True
+L_Character_C.Replication=True
+L_Character_C.Collision=True
+L_Character_C.Input=True
+L_Character_C.Actor=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+BlackboardData.Parent=True
+BlackboardData.Key=True
+BehaviorTreeGraphNode_Root.AI=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Task=True
+BTTask_Wait.Description=True
+BTDecorator_BlueprintBase_New_C.FlowControl=True
+BTDecorator_BlueprintBase_New_C.Description=True
+BTDecorator_BlueprintBase_New_C.Condition=True
+HasValidEnemy_Decorator_C.FlowControl=True
+HasValidEnemy_Decorator_C.Description=False
+HasValidEnemy_Decorator_C.Condition=True
+HasValidEnemy_Decorator_C.Default=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Lighting=True
+NavMeshBoundsVolume.Physics=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.VirtualTexture=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Activation=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.Actor=True
+L_Enemy_C.Default=True
+BTTask_PlayAnimation.Node=True
+BTTask_PlayAnimation.Task=True
+BTTask_PlayAnimation.Description=True
+BTDecorator_IsAtLocation.Condition=True
+BTDecorator_IsAtLocation.Blackboard=True
+BTDecorator_IsAtLocation.Description=True
+L_Character_C.Default=True
+K2Node_CallParentFunction.Graph=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Physics=True
+TextRenderActor.Lighting=True
+TextRenderActor.Rendering=True
+TextRenderActor.VirtualTexture=True
+TextRenderActor.Tags=True
+TextRenderActor.Activation=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+DoHammerDamage_Blueprint_C.AnimNotify=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -725,7 +795,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Characters/Enemy/Animations
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -784,21 +854,36 @@ Character=
 Pawn=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" "
 StaticMeshSocket="\"Object.StaticMeshSocket.RelativeLocation\" \"Object.StaticMeshSocket.RelativeRotation\" "
+BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
+BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/L_Enemy
-MRUItem1=/Game/Blueprints/L_Hero
-MRUItem2=/Game/Characters/Enemy/Enemy_SkelMesh
-MRUItem3=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
-MRUItem4=/Game/Characters/Enemy/Animations/Enemy_AnimBlueprint
-MRUItem5=/Game/Characters/Hero/Weapons/Hero_Rifle
-MRUItem6=/Game/Characters/Hero/Hero_Skeleton
-MRUItem7=/Game/Characters/Hero/Hero_SkelMesh
-MRUItem8=/Game/Characters/Hero/Animations/Hero_Run_BlendSpace
-MRUItem9=/Game/Characters/Hero/Animations/Hero_Idle
-MRUItem10=/Game/Characters/Hero/Hero_Physics
-MRUItem11=/Game/Characters/Hero/Animations/Hero_Death
-MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/Characters/Enemy/Animations/DoHammerDamage_Blueprint
+MRUItem1=/Game/Blueprints/AI/HasValidEnemy_Decorator
+MRUItem2=/Game/Blueprints/L_Hero
+MRUItem3=/Game/Characters/Enemy/Animations/Enemy_Attack
+MRUItem4=/Game/Characters/Enemy/Enemy_Hammer
+MRUItem5=/Game/Characters/Enemy/Enemy_Skeleton
+MRUItem6=/Game/Blueprints/L_Character
+MRUItem7=/Game/Blueprints/AI/Dwarf_BehaviorTree
+MRUItem8=/Game/Blueprints/L_Enemy
+MRUItem9=/Game/Blueprints/AI/BTDecorator_BlueprintBase_New
+MRUItem10=/Game/Blueprints/AI/Enemy_BehaviorTree
+MRUItem11=/Game/Blueprints/AI/Enemy_Blueprint
+MRUItem12=/Game/Characters/Enemy/Enemy_SkelMesh
+MRUItem13=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
+MRUItem14=/Game/Characters/Enemy/Animations/Enemy_AnimBlueprint
+MRUItem15=/Game/Characters/Hero/Weapons/Hero_Rifle
+MRUItem16=/Game/Characters/Hero/Hero_Skeleton
+MRUItem17=/Game/Characters/Hero/Hero_SkelMesh
+MRUItem18=/Game/Characters/Hero/Animations/Hero_Run_BlendSpace
+MRUItem19=/Game/Characters/Hero/Animations/Hero_Idle
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -812,13 +897,20 @@ MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 /Game/Characters/Hero/Animations/Hero_Run_BlendSpace.Hero_Run_BlendSpace=0
 /Game/Characters/Hero/Weapons/Hero_Rifle.Hero_Rifle=0
 /Game/Characters/Enemy/Enemy_SkelMesh.Enemy_SkelMesh=0
+/Game/Blueprints/L_Character.L_Character=0
+/Game/Characters/Enemy/Animations/DoHammerDamage_Blueprint.DoHammerDamage_Blueprint=0
+/Game/Characters/Enemy/Enemy_Skeleton.Enemy_Skeleton=0
+/Game/Characters/Enemy/Enemy_Hammer.Enemy_Hammer=0
+/Game/Blueprints/AI/Dwarf_BehaviorTree.Dwarf_BehaviorTree=0
+/Game/Blueprints/AI/Dwarf_Blackboard.Dwarf_Blackboard=0
+/Game/Characters/Enemy/Animations/Enemy_Attack.Enemy_Attack=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=246.400 Y=134.400
-WindowSize=X=1291.200 Y=731.200
+WindowSize=X=1296.000 Y=736.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1709,5 +1801,12 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[PlacementMode]
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Game/Blueprints/L_Enemy.L_Enemy;
+
+[MessageLog]
+LastLogListing=PIE
 
 
