--- a/Lesson_01/Config/DefaultEngine.ini
+++ b/Lesson_01/Config/DefaultEngine.ini
@@ -17,11 +17,11 @@ MinimumiOSVersion=IOS_11
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Lesson_01")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Lesson_01")
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
