Enemy spawn logic in progress.

--- a/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -72,7 +72,8 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/L_GameMode.L_GameMode
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -750,6 +751,28 @@ TextRenderActor.Cooking=True
 TextRenderActor.Replication=True
 TextRenderActor.Input=True
 DoHammerDamage_Blueprint_C.AnimNotify=True
+L_SpawnPoint_C.TransformCommon=True
+L_SpawnPoint_C.Sprite=True
+L_SpawnPoint_C.Physics=True
+L_SpawnPoint_C.Collision=True
+L_SpawnPoint_C.Lighting=True
+L_SpawnPoint_C.Rendering=True
+L_SpawnPoint_C.VirtualTexture=True
+L_SpawnPoint_C.Tags=True
+L_SpawnPoint_C.Activation=True
+L_SpawnPoint_C.Cooking=True
+L_SpawnPoint_C.Replication=True
+L_SpawnPoint_C.Input=True
+L_SpawnPoint_C.Actor=True
+L_GameMode_C.Tick=True
+L_GameMode_C.Classes=True
+L_GameMode_C.Game=True
+L_GameMode_C.GameMode=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+ObjectProperty.Events=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -864,26 +887,26 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Enemy/Animations/DoHammerDamage_Blueprint
-MRUItem1=/Game/Blueprints/AI/HasValidEnemy_Decorator
-MRUItem2=/Game/Blueprints/L_Hero
-MRUItem3=/Game/Characters/Enemy/Animations/Enemy_Attack
-MRUItem4=/Game/Characters/Enemy/Enemy_Hammer
-MRUItem5=/Game/Characters/Enemy/Enemy_Skeleton
-MRUItem6=/Game/Blueprints/L_Character
-MRUItem7=/Game/Blueprints/AI/Dwarf_BehaviorTree
-MRUItem8=/Game/Blueprints/L_Enemy
-MRUItem9=/Game/Blueprints/AI/BTDecorator_BlueprintBase_New
-MRUItem10=/Game/Blueprints/AI/Enemy_BehaviorTree
-MRUItem11=/Game/Blueprints/AI/Enemy_Blueprint
-MRUItem12=/Game/Characters/Enemy/Enemy_SkelMesh
-MRUItem13=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
-MRUItem14=/Game/Characters/Enemy/Animations/Enemy_AnimBlueprint
-MRUItem15=/Game/Characters/Hero/Weapons/Hero_Rifle
-MRUItem16=/Game/Characters/Hero/Hero_Skeleton
-MRUItem17=/Game/Characters/Hero/Hero_SkelMesh
-MRUItem18=/Game/Characters/Hero/Animations/Hero_Run_BlendSpace
-MRUItem19=/Game/Characters/Hero/Animations/Hero_Idle
+MRUItem0=/Game/Blueprints/L_GameMode
+MRUItem1=/Game/Characters/Enemy/Animations/DoHammerDamage_Blueprint
+MRUItem2=/Game/Blueprints/AI/HasValidEnemy_Decorator
+MRUItem3=/Game/Blueprints/L_Hero
+MRUItem4=/Game/Characters/Enemy/Animations/Enemy_Attack
+MRUItem5=/Game/Characters/Enemy/Enemy_Hammer
+MRUItem6=/Game/Characters/Enemy/Enemy_Skeleton
+MRUItem7=/Game/Blueprints/L_Character
+MRUItem8=/Game/Blueprints/AI/Dwarf_BehaviorTree
+MRUItem9=/Game/Blueprints/L_Enemy
+MRUItem10=/Game/Blueprints/AI/BTDecorator_BlueprintBase_New
+MRUItem11=/Game/Blueprints/AI/Enemy_BehaviorTree
+MRUItem12=/Game/Blueprints/AI/Enemy_Blueprint
+MRUItem13=/Game/Characters/Enemy/Enemy_SkelMesh
+MRUItem14=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
+MRUItem15=/Game/Characters/Enemy/Animations/Enemy_AnimBlueprint
+MRUItem16=/Game/Characters/Hero/Weapons/Hero_Rifle
+MRUItem17=/Game/Characters/Hero/Hero_Skeleton
+MRUItem18=/Game/Characters/Hero/Hero_SkelMesh
+MRUItem19=/Game/Characters/Hero/Animations/Hero_Run_BlendSpace
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -910,7 +933,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=246.400 Y=134.400
-WindowSize=X=1296.000 Y=736.000
+WindowSize=X=1297.600 Y=737.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1803,6 +1826,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/L_SpawnPoint.L_SpawnPoint;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Blueprints/L_Enemy.L_Enemy;
 
